# coursework7

./: .env.sample  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  urls.py  views.py
mailing/management/commands/: add_users_to_group.py  create_groups.py
mailing/migrations/: 0001_initial.py  0002_alter_newsletter_options_emailattempt_owner_and_more.py
mailing/templates/mailing/: base.html  emailattempt_list.html  index.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  newsletter_confirm_delete.html  newsletter_detail.html  newsletter_form.html  newsletter_list.html  recipient_confirm_delete.html  recipient_detail.html  recipient_form.html  recipient_list.html
mailing/templates/mailing/includes/: inc_menu.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/: login.html  password_reset_email.html  user_list.html
users/templates/users/: user_form.html
